--- a/sipero/application/views/v_regist.html
+++ b/sipero/application/views/v_regist.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="stylesheet" href="/desktop/Tubes Impal/styling.css">
     <head><font size='5' face='Adobe Hebrew'>Registrasi</font></head>
     <form><font size='3' face='Adobe Hebrew'>
         <table>
@@ -7,7 +8,11 @@
                 <td>:</td>
                 <td><input type="text" name="Nama"></td>
             </tr>
-
+            <tr>
+                <td>NIK</td>
+                <td>:</td>
+                <td><input type="number" name="NIK"></td>
+            </tr>
             <tr>
                 <td>Username</td>
                 <td>:</td>
@@ -22,6 +27,9 @@
                 <td>Confirm Password</td>
                 <td>:</td>
                 <td><input type="password" name="Confirm Pass"></td>
+            </tr>
+            <tr>
+                <td><input type="submit" name="regist-submit"></td>
             </tr>
         </table>
     </font></form>
