--- a/sipero/application/views/v_login.html
+++ b/sipero/application/views/v_login.html
@@ -1,4 +1,5 @@
 <html>
+    <link rel="stylesheet" href="/css/styling.css">
     <head><font size='5' face='Adobe Hebrew'>LOG IN</font></head>
     <form><font size='3' face='Adobe Hebrew'>
         <table>
