--- a/sipero/application/views/v_regist.html
+++ b/sipero/application/views/v_regist.html
@@ -1,8 +1,8 @@
 <html>
-    <link rel="stylesheet" href="/desktop/Tubes Impal/styling.css">
-    <head><font size='5' face='Adobe Hebrew'>Registrasi</font></head>
-    <form><font size='3' face='Adobe Hebrew'>
-        <table>
+    <link rel="stylesheet" href="/css/styling.css">
+    <head><font size='5' face='Adobe Hebrew' class="regist">Registrasi</font></head>
+    <form><font size='3' face='Adobe Hebrew' class="regist">
+        <table class="regits regist">
             <tr>
                 <td>Nama</td>
                 <td>:</td>
@@ -29,7 +29,7 @@
                 <td><input type="password" name="Confirm Pass"></td>
             </tr>
             <tr>
-                <td><input type="submit" name="regist-submit"></td>
+                <td><input name="regist-submit" type="submit" class="regist"></td>
             </tr>
         </table>
     </font></form>
