--- a/sipero/application/views/v_login.html
+++ b/sipero/application/views/v_login.html
@@ -1,19 +1,20 @@
 <html>
-    <link rel="stylesheet" href="/css/styling.css">
-    <head><font size='5' face='Adobe Hebrew'>LOG IN</font></head>
-    <form><font size='3' face='Adobe Hebrew'>
-        <table>
-            <tr>
-                <td>Username</td>
-                <td>:</td>
-                <td><input type='text' name='Username'><br></td>
-            </tr>
-            <tr>
-                <td>Password</td>
-                <td>:</td>
-                <td><input type="password" name="Password"></td>
-            </tr>
-        </table>
-    </font>
-    </form>
+    <head>
+        <title>Log In</title>
+        <link rel="stylesheet" type="text/css" href="css/css_login.css">
+    </head>
+    <body>
+        <header>
+            <div class="top">
+                <h1>LOG IN</h1>
+            </div>            
+            <form class="login">
+                <p>Username</p>
+                <input type='text' name='Username' placeholder="Enter Username">
+                <p>Password</p>
+                <input type="password" name="Password" placeholder="Enter Password">
+                <input type="submit" name="login btn" value="Log In">
+            </form>
+        </header>
+    </body>
 </html>
