--- a/sipero/application/views/v_home.html
+++ b/sipero/application/views/v_home.html
@@ -13,10 +13,10 @@
 	<div id="templatemo_menu">
     	<ul>
             <li><a href="index.html" class="current">Home</a></li>
-            <li><a href="subpage.html">Katalog buku</a></li>
-            <li><a href="subpage.html">Peminjaman buku</a></li>            
-            <li><a href="subpage.html">Pengembalian</a></li>
-			<li><a href="subpage.html">Peminjaman ruangan</a></li>  
+            <li><a href="#">Katalog buku</a></li>
+            <li><a href="#">Peminjaman buku</a></li>            
+            <li><a href="#">Pengembalian</a></li>
+			<li><a href="#">Peminjaman ruangan</a></li>  
             <li><a href="#">Help</a></li> 
 			<li><a href="v_login.html">Login</a></li> 
 			<li><a href="v_regist.html">Sign up</a></li> 
@@ -36,15 +36,15 @@
         	<div class="templatemo_content_left_section">
             	<h1>Categories</h1>
                 <ul>
-                    <li><a href="subpage.html">Novel</a></li>
-                    <li><a href="subpage.html">Pendidikan</a></li>
+                    <li><a href="#">Novel</a></li>
+                    <li><a href="#">Pendidikan</a></li>
                     <li><a href="#">Kamus</a></li>
                     <li><a href="#">Ensiklopedia</a></li>
                     <li><a href="#">Ilmiah</a></li>
                     <li><a href="#">Antologi</a></li>
                     <li><a href="#">Dongeng</a></li>
                     <li><a href="#">Biografi</a></li>
-                    <li><a href="#">Karya Ilmiaah</a></li>
+                    <li><a href="#">Karya Ilmiah</a></li>
             	</ul>
           </div>
 		  <div class="templatemo_content_left_section">
@@ -59,7 +59,7 @@
                     <li><a href="#">Langit Biru</a></li>
                     <li><a href="#">Tentang Kamu</a></li>
                     <li><a href="#">Engineer</a></li>
-                    <li><a href="http://www.photovaco.com" target="_parent">Cara Mengatasi Stress</a></li>
+                    <li><a href="#" target="_parent">Cara Mengatasi Stress</a></li>
             	</ul>
             </div>
 </div> <!-- end of content left -->
@@ -71,8 +71,8 @@
                 <div class="product_info">
                	  <p>Etiam luctus. Quisque facilisis suscipit elit. Curabitur...</p>
                   <h3>6 buku</h3>
-                    <div class="buy_now_button"><a href="subpage.html">Pinjam</a></div>
-                    <div class="detail_button"><a href="subpage.html">Detail</a></div>
+                    <div class="pinjam_button"><a href="#">Pinjam</a></div>
+                    <div class="detail_button"><a href="#">Detail</a></div>
                 </div>
                 <div class="cleaner">&nbsp;</div>
             </div>
@@ -85,8 +85,8 @@
                 <div class="product_info">
                 	<p>Aliquam a dui, ac magna quis est eleifend dictum.</p>
                     <h3>4 buku</h3>
-                    <div class="buy_now_button"><a href="subpage.html">Pinjam</a></div>
-                    <div class="detail_button"><a href="subpage.html">Detail</a></div>
+                    <div class="pinjam_button"><a href="#">Pinjam</a></div>
+                    <div class="detail_button"><a href="#">Detail</a></div>
                 </div>
                 <div class="cleaner">&nbsp;</div>
             </div>
@@ -99,8 +99,8 @@
                 <div class="product_info">
                 	<p>Ut fringilla enim sed turpis. Sed justo dolor, convallis at.</p>
                     <h3>10 buku</h3>
-                    <div class="buy_now_button"><a href="subpage.html">Pinjam</a></div>
-                    <div class="detail_button"><a href="subpage.html">Detail</a></div>
+                    <div class="pinjam_button"><a href="#">Pinjam</a></div>
+                    <div class="detail_button"><a href="#">Detail</a></div>
                 </div>
                 <div class="cleaner">&nbsp;</div>
             </div>
@@ -113,15 +113,15 @@
                 <div class="product_info">
                 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                     <h3>5 buku</h3>
-                    <div class="buy_now_button"><a href="subpage.html">Pinjam</a></div>
-                    <div class="detail_button"><a href="subpage.html">Detail</a></div>
+                    <div class="pinjam_button"><a href="#">Pinjam</a></div>
+                    <div class="detail_button"><a href="#">Detail</a></div>
                 </div>
                 <div class="cleaner">&nbsp;</div>
             </div>
             
             <div class="cleaner_with_height">&nbsp;</div>
             
-            <a href="subpage.html"></a>
+            <a href="#"></a>
         </div> <!-- end of content right -->
     
     	<div class="cleaner_with_height">&nbsp;</div>
