pinjam buku, pinjam ruangan hehe
peminjaman buku & peminjaman ruangan
jadi pinjam buku & pinjam ruangan
hehehe

--- a/sipero/application/views/v_start.html
+++ b/sipero/application/views/v_start.html
@@ -12,9 +12,9 @@
                 <ul>
                     <li class="act"><a href="#">Home</a></li>
                     <li><a href="#">Katalog Buku</a></li>
-                    <li><a href="#">Peminjaman Buku</a></li>
+                    <li><a href="#">Pinjam Buku</a></li>
                     <li><a href="#">Pengembalian</a></li>
-                    <li><a href="#">Peminjaman Ruangan</a></li>
+                    <li><a href="#">Pinjam Ruangan</a></li>
                     <li><a href="#">Help</a></li>
                 </ul>
             </div>
