--- a/sipero/application/views/v_home.html
+++ b/sipero/application/views/v_home.html
@@ -1,39 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Book Store Template, Free CSS Template, CSS Website Layout</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="templatemo_style.css" rel="stylesheet" type="text/css" />
+<meta charset="utf-8">
+<title>v_home</title>
+<link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
+<header>
+	<div class="heading">
+                <div class="logo">
+                    <img src="images/logox.png">
+                </div>
+                <ul>
+                    <li class="v_home.html"><a href="#">Home</a></li>
+                    <li><a href="#">Katalog Buku</a></li>
+                    <li><a href="#">Peminjaman Buku</a></li>
+                    <li><a href="#">Pengembalian</a></li>
+                    <li><a href="#">Peminjaman Ruangan</a></li>
+					<li><a href="v_login.html">Login</a></li>
+					<li><a href="v_regist.html">Sign Up</a></li>
+                    <li><a href="#">Help</a></li>
+                </ul>
+            </div>
+</header>
 <body>
-<!--  Free CSS Templates from www.templatemo.com -->
-<div id="templatemo_container">
-	<div id="templatemo_menu">
-    	<ul>
-            <li><a href="index.html" class="current">Home</a></li>
-            <li><a href="#">Katalog buku</a></li>
-            <li><a href="#">Peminjaman buku</a></li>            
-            <li><a href="#">Pengembalian</a></li>
-			<li><a href="#">Peminjaman ruangan</a></li>  
-            <li><a href="#">Help</a></li> 
-			<li><a href="v_login.html">Login</a></li> 
-			<li><a href="v_regist.html">Sign up</a></li> 
-    	</ul>
-    </div> <!-- end of menu -->
-    
-  <div id="templatemo_header">
-	  <div id="sipero">
-			
-		</div>
-        </div>
-    </div> <!-- end of header -->
-    
-    <div id="templatemo_content">
-    	
-        <div id="templatemo_content_left">
-        	<div class="templatemo_content_left_section">
+	<div id="body1">
+	        <div id="menu_left">
+        	<div class="menu_left_section">
             	<h1>Categories</h1>
                 <ul>
                     <li><a href="#">Novel</a></li>
@@ -47,7 +39,7 @@
                     <li><a href="#">Karya Ilmiah</a></li>
             	</ul>
           </div>
-		  <div class="templatemo_content_left_section">
+		  <div class="menu_left_section">
             	<h1>Bestsellers</h1>
                 <ul>
                     <li><a href="#">Ratu Pantai Selatan</a></li>
@@ -61,10 +53,8 @@
                     <li><a href="#">Engineer</a></li>
                     <li><a href="#" target="_parent">Cara Mengatasi Stress</a></li>
             	</ul>
-            </div>
-</div> <!-- end of content left -->
-        
-        <div id="templatemo_content_right">
+            </div> 
+		 <div id="menu_right">
         	<div class="templatemo_product_box">
             	<h1>Photography  <span>(by Best Author)</span></h1>
    	      <img src="images/templatemo_image_01.jpg" alt="image" />
@@ -107,7 +97,7 @@
             
             <div class="cleaner_with_width">&nbsp;</div>
             
-            <div class="templatemo_product_box">
+        <div class="templatemo_product_box">
             	<h1>Sushi Book  <span>(by Japanese Name)</span></h1>
            	  <img src="images/templatemo_image_04.jpg" alt="image" />
                 <div class="product_info">
@@ -117,23 +107,10 @@
                     <div class="detail_button"><a href="#">Detail</a></div>
                 </div>
                 <div class="cleaner">&nbsp;</div>
-            </div>
-            
-            <div class="cleaner_with_height">&nbsp;</div>
-            
-            <a href="#"></a>
-        </div> <!-- end of content right -->
-    
-    	<div class="cleaner_with_height">&nbsp;</div>
-    </div> <!-- end of content -->
-    
-<!-- end of footer -->
-<!--  Free CSS Template www.templatemo.com -->
-</div> <!-- end of container -->
-<!-- templatemo 086 book store -->
-<!-- 
-Book Store Template 
-http://www.templatemo.com/preview/templatemo_086_book_store 
--->
+          </div>
+<a href="#"></a>
+        </div> 
+</div>
+	
 </body>
 </html>
