--- a/sipero/application/views/v_start.html
+++ b/sipero/application/views/v_start.html
@@ -10,7 +10,7 @@
                     <img src="image/logo2.png">
                 </div>
                 <ul>
-                    <li class="act"><a href="#">Home</a></li>
+                    <li class="act"><a href="v_home.html">Home</a></li>
                     <li><a href="#">Katalog Buku</a></li>
                     <li><a href="#">Pinjam Buku</a></li>
                     <li><a href="#">Pengembalian</a></li>
@@ -22,8 +22,8 @@
                 <h1>PINJAM BUKU SEKARANG</h1>
             </div>
             <div class="btn">
-                <a href="#" class="button">Log In</a>
-                <a href="#" class="button">Buat Akun</a>
+                <a href="v_login.html" class="button">Log In</a>
+                <a href="v_regist.html" class="button">Buat Akun</a>
             </div>
         </header>
     </body>
