--- a/sipero/application/views/v_home.html
+++ b/sipero/application/views/v_home.html
@@ -12,10 +12,10 @@
                 </div>
                 <ul>
                     <li class="v_home.html"><a href="#">Home</a></li>
-                    <li><a href="#">Katalog Buku</a></li>
-                    <li><a href="#">Peminjaman Buku</a></li>
-                    <li><a href="#">Pengembalian</a></li>
-                    <li><a href="#">Peminjaman Ruangan</a></li>
+                    <li><a href="v_katalog.html">Katalog Buku</a></li>
+                    <li><a href="v_peminjaman.html">Peminjaman Buku</a></li>
+                    <li><a href="v_pengembalian.html">Pengembalian</a></li>
+                    <li><a href="v_p_ruangan.html">Peminjaman Ruangan</a></li>
 					<li><a href="v_login.html">Login</a></li>
 					<li><a href="v_regist.html">Sign Up</a></li>
                     <li><a href="#">Help</a></li>
@@ -23,7 +23,6 @@
             </div>
 </header>
 <body>
-	<div id="body1">
 	        <div id="menu_left">
         	<div class="menu_left_section">
             	<h1>Categories</h1>
@@ -54,6 +53,7 @@
                     <li><a href="#" target="_parent">Cara Mengatasi Stress</a></li>
             	</ul>
             </div> 
+	</div>
 		 <div id="menu_right">
         	<div class="templatemo_product_box">
             	<h1>Photography  <span>(by Best Author)</span></h1>
@@ -110,7 +110,7 @@
           </div>
 <a href="#"></a>
         </div> 
-</div>
+
 	
 </body>
 </html>
