--- a/sipero/application/views/v_p_ruangan.html
+++ b/sipero/application/views/v_p_ruangan.html
@@ -11,7 +11,7 @@
                     <img src="images/logox.png">
                 </div>
                 <ul>
-                    <li class="v_home.html"><a href="#">Home</a></li>
+                    <li class="v_home.html"><a href="v_home.html">Home</a></li>
                     <li><a href="v_katalog.html">Katalog Buku</a></li>
                     <li><a href="v_peminjaman.html">Peminjaman Buku</a></li>
                     <li><a href="v_pengembalian.html">Pengembalian</a></li>
