--- a/sipero/application/views/v_login.html
+++ b/sipero/application/views/v_login.html
@@ -13,8 +13,11 @@
                 <input type='text' name='Username' placeholder="Enter Username">
                 <p>Password</p>
                 <input type="password" name="Password" placeholder="Enter Password">
-                <input type="submit" name="login btn" value="Log In">
+                <input type="submit" name="loginbtn" value="Log In">
             </form>
+            <div class="home">
+                <a href="v_home.html" class="button">Home</a>
+            </div>
         </header>
     </body>
 </html>
