--- a/sipero/application/views/v_regist.html
+++ b/sipero/application/views/v_regist.html
@@ -21,6 +21,9 @@
                 <input type="password" name="confirmpwd" placeholder="Confirm Password">
                 <input type="submit" name="submitreg" class="regist" value="Submit">
             </form>
+            <div class="home">
+                <a href="v_home.html" class="button">Home</a>
+            </div>
         </header>
     </body>
 </html>
