--- a/sipero/application/views/v_login.html
+++ b/sipero/application/views/v_login.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" type="text/css" href="css/css_login.css">
     </head>
     <body>
+        <div class="logo">
+            <img src="image/logo2.png">
+        </div>
         <header>
             <div class="top">
                 <h1>LOG IN</h1>
